# ContextRAG

./: .env.example  .gitignore  README.md  pyproject.toml
nlp_exercises/: gensim_test.py  nlp_test.py
src/data_processing/: html_to_markdown.py  markdown_processing.py  releasenotes_processing.py
src/markdown_grouping/: category_assignment.py  category_extraction.py  file_grouping.py
src/utils/: chat.py  tokenizer.py
src/vector_db/: main.py
tests/data_processor/: test_markdown_processing.py
tests/markdown_grouping/: test_file_grouping.py
tests/vector_db/: test_main.py
